--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".T24_SoundPool_MVVM.SoundPoolMVVMActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".T23_SoundPool_MVC.SoundPoolMVCActivity">
+        </activity>
         <activity android:name=".T22_RuntimePermission.PermissionActivity">
         </activity>
         <activity android:name=".T21_fragment2.FragmentExample2Activity">
@@ -60,11 +69,6 @@
         <activity android:name=".T11_AsyncTask.AsyncTaskActivity">
         </activity>
         <activity android:name=".T10_Thread.ThreadActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".T09_WebView.WebViewActivity"/>
         <activity android:name=".T08_Dialog.T08_DialogActivity"/>
