--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,16 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".T24_SoundPool_MVVM.SoundPoolMVVMActivity">
+        <activity android:name=".T26_retrofit.RetrofitActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".T25_Json.JsonActivity">
+        </activity>
+        <activity android:name=".T24_SoundPool_MVVM.SoundPoolMVVMActivity">
         </activity>
         <activity android:name=".T23_SoundPool_MVC.SoundPoolMVCActivity">
         </activity>
