--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     implementation "com.google.dagger:dagger:2.18"
     kapt "com.google.dagger:dagger-compiler:2.18"
+    implementation 'com.google.dagger:dagger-android:2.18'
+    implementation 'com.google.dagger:dagger-android-support:2.18'
+    kapt 'com.google.dagger:dagger-android-processor:2.18'
 }
