video view full screen mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".T30_VideoView.VideoViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".T29_dagge2_3.DaggerTest3Activity">
         </activity>
         <activity android:name=".T28_dagger2_2.DaggerTest2Activity">
@@ -64,11 +71,6 @@
         <activity android:name=".T16_BR.BRActivity">
         </activity>
         <activity android:name=".T15_RecyclerView.RecyclerViewActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".T14_xml.XmlActivity">
         </activity>
